[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Friends.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=3]
[ext_resource path="res://images/trade_mode/box.png" type="Texture" id=4]
[ext_resource path="res://images/default_icon.png" type="Texture" id=5]
[ext_resource path="res://images/Menu_interface/global_points.png" type="Texture" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )

[node name="AddFriendNode" type="Control" parent="."]
margin_left = 16.0
margin_top = 126.934
margin_right = 363.0
margin_bottom = 562.934
theme = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="AddFriendNode"]
margin_left = -3.0
margin_top = 22.0
margin_right = 344.0
margin_bottom = 433.0
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="AddFriendNode"]
margin_left = 108.83
margin_top = 55.7753
margin_right = 240.83
margin_bottom = 81.7753
custom_colors/font_color = Color( 0.717647, 0.113725, 0.113725, 1 )
text = "Add Friends"

[node name="LineEdit" type="LineEdit" parent="AddFriendNode"]
margin_left = 126.0
margin_top = 104.0
margin_right = 273.0
margin_bottom = 145.0

[node name="Label" type="Label" parent="AddFriendNode/LineEdit"]
margin_left = -78.9017
margin_top = 1.36038
margin_right = -15.9017
margin_bottom = 27.3604
custom_colors/font_color = Color( 0.105882, 0.0980392, 0.772549, 1 )
text = "Name:"

[node name="Button" type="Button" parent="AddFriendNode"]
margin_left = 133.0
margin_top = 176.0
margin_right = 211.0
margin_bottom = 202.0
text = "Search"

[node name="player_profile" type="Control" parent="AddFriendNode"]
visible = false
margin_left = 24.0
margin_top = 233.0
margin_right = 321.0
margin_bottom = 342.0

[node name="PlayerAvatar" type="TextureRect" parent="AddFriendNode/player_profile"]
margin_left = 8.16226
margin_top = 12.2434
margin_right = 78.1623
margin_bottom = 92.2434
texture = ExtResource( 5 )

[node name="GlobalPointImage" type="TextureRect" parent="AddFriendNode/player_profile"]
margin_left = 204.056
margin_top = 43.532
margin_right = 304.056
margin_bottom = 143.532
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="PointsLabel" type="Label" parent="AddFriendNode/player_profile/GlobalPointImage"]
margin_left = -152.746
margin_top = 21.8757
margin_right = -76.7464
margin_bottom = 47.8757
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
text = "POINTS"

[node name="NameLabel" type="Label" parent="AddFriendNode/player_profile"]
margin_left = 129.236
margin_top = 9.52261
margin_right = 192.236
margin_bottom = 35.5226
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.5, 1.5 )
text = "NAME"

[node name="AddFriendButton" type="Button" parent="AddFriendNode/player_profile"]
margin_left = 79.1594
margin_top = 112.94
margin_right = 237.159
margin_bottom = 138.94
text = "Send Request"

[node name="UnknownPlayerLabel" type="Label" parent="AddFriendNode"]
visible = false
margin_left = 89.1725
margin_top = 264.933
margin_right = 249.172
margin_bottom = 290.933
text = "No player found"

[node name="FriendRequestSendedLabel" type="Label" parent="AddFriendNode"]
visible = false
margin_left = 66.6478
margin_top = 345.435
margin_right = 290.648
margin_bottom = 371.435
text = "Friend request sended"

[node name="MyFriendNode" type="Control" parent="."]
margin_left = 573.806
margin_top = 77.5413
margin_right = 613.806
margin_bottom = 117.541

[node name="FriendContainer" type="ScrollContainer" parent="MyFriendNode"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -119.0
margin_top = -28.0
margin_right = 388.0
margin_bottom = 923.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MyFriendNode/FriendContainer"]

[node name="BackButton" type="Button" parent="."]
margin_left = 122.174
margin_top = 57.1203
margin_right = 210.174
margin_bottom = 93.1203
theme = ExtResource( 3 )
text = "Back"

[connection signal="pressed" from="AddFriendNode/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="AddFriendNode/player_profile/AddFriendButton" to="." method="_on_AddFriendButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
